# SDL_Tutorials

./: CMakeLists.txt
TutorialTwo/: 02_getting_an_image_on_the_screen.cpp
